WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85947
DrawingAreaProxyImpl doesn't work with window server hosting
https://bugs.webkit.org/show_bug.cgi?id=85947
Summary
DrawingAreaProxyImpl doesn't work with window server hosting
Anders Carlsson
Reported
2012-05-08 18:53:25 PDT
DrawingAreaProxyImpl doesn't work with window server hosting
Attachments
Patch
(10.28 KB, patch)
2012-05-08 18:55 PDT
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-05-08 18:55:37 PDT
Created
attachment 140846
[details]
Patch
Andreas Kling
Comment 2
2012-05-08 18:59:44 PDT
Comment on
attachment 140846
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140846&action=review
r=me
> Source/WebKit2/WebProcess/WebPage/ca/LayerTreeHostCA.h:61 > + // The context for this layer tree.
This comment adds nothing.
Anders Carlsson
Comment 3
2012-05-08 19:02:43 PDT
Committed
r116478
: <
http://trac.webkit.org/changeset/116478
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug