third_party/WebKit/Source/WebKit2/WebProcess/WebPage/ca/mac/LayerTreeHostCAMac.h
@@ -55,7 +55,7 @@ private:
     virtual void setLayerHostingMode(LayerHostingMode) OVERRIDE;
 
     // LayerTreeHostCA
-    virtual void platformInitialize(LayerTreeContext&);
+    virtual void platformInitialize();
     virtual void didPerformScheduledLayerFlush();
 
     virtual bool flushPendingLayerChanges();
