third_party/WebKit/Source/WebKit2/WebProcess/WebPage/ca/mac/LayerTreeHostCAMac.mm
@@ -59,7 +59,7 @@ LayerTreeHostCAMac::~LayerTreeHostCAMac()
     ASSERT(!m_layerHostingContext);
 }
 
-void LayerTreeHostCAMac::platformInitialize(LayerTreeContext& layerTreeContext)
+void LayerTreeHostCAMac::platformInitialize()
 {
     switch (m_webPage->layerHostingMode()) {
     case LayerHostingModeDefault:
@@ -71,9 +71,9 @@ void LayerTreeHostCAMac::platformInitialize(LayerTreeContext& layerTreeContext)
         break;
 #endif
     }
-    m_layerHostingContext->setRootLayer(rootLayer()->platformLayer());
 
-    layerTreeContext.contextID = m_layerHostingContext->contextID();
+    m_layerHostingContext->setRootLayer(rootLayer()->platformLayer());
+    m_layerTreeContext.contextID = m_layerHostingContext->contextID();
 }
 
 void LayerTreeHostCAMac::scheduleLayerFlush()
@@ -170,6 +170,7 @@ void LayerTreeHostCAMac::setLayerHostingMode(LayerHostingMode layerHostingMode)
     }
 
     m_layerHostingContext->setRootLayer(rootLayer()->platformLayer());
+    m_layerTreeContext.contextID = m_layerHostingContext->contextID();
 
     scheduleLayerFlush();
 }
